# dotfiles

./: .gitignore  .rgignore  .stow-local-ignore  .stowrc  .xonshrc  .zshrc  CLAUDE.md  CONTEXT.md  README.md  \  backup.sh  core-memory.md  deps.toml  home.nix  install.py  install.sh  messages.md  pyproject.toml  pytest.ini  setup.py  setup.sh  starship.toml  starship.toml.tmpl  taskboard.md
.claude/: .stow-local-ignore  CLAUDE.md  agents  plans  projects  settings.json  statusline.sh
.config/: starship.toml  starship.toml.tmpl
.hermes/: .env.example  .stow-local-ignore  README.md  SOUL.md  SOUL.md.example  config.yaml.example  policy.json  role-policy.json
autostart/: apply-kde-keybinds.desktop
docs/: desktop.md  kb-clipper-template.json  migrate-to-knowledgebase.md  shell.md  theming.md  tooling.md
ghostty/: config
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
hypr/: hypridle.conf  hyprland.conf  vmrun
keyboards/: README.md
kitty/: kitty.conf
networkmanager-dmenu/: config.ini
nvim/: init.lua
omp/: cert.omp.toml
opencode/: agent_tmpl.md  opencode.json
powerlevel10k-stuff/: powerlevel10k.zsh-theme.zwc  powerlevel9k.zsh-theme.zwc
qt6ct/: qt6ct.conf
rofi/: config.rasi
scripts/: beads-hub.sh  board-ui.sh  build-kb-index.py  init-agent-workspace.sh  kb-clip.py  kb-index.py  kb-search.py  kb.sh  kb_embeddings.py  migrate-runtime-dirs.sh  nerd-glyph  pipeline-drift.py  pipeline-render.py
sway/: prefs
templates/: role-template.md
tests/: conftest.py  test_adversarial.py  (+9 more)
(+748 files in other folders)
